# taknn-web

./: .gitignore  BUILD_SPEC.md  PLAN.md  README.md  RULES.md
engine/: Cargo.toml
engine/.cargo/: config.toml
engine/scripts/: generate_shards.sh
engine/tak-core/: Cargo.toml
engine/tak-core/src/: board.rs  descriptor.rs  lib.rs  moves.rs  piece.rs  ptn.rs  rules.rs  state.rs  symmetry.rs  tactical.rs  templates.rs  tensor.rs  tps.rs  zobrist.rs
engine/tak-data/: Cargo.toml
engine/tak-data/src/: lib.rs  selfplay.rs  shard.rs
engine/tak-data/tests/: shard_tests.rs
engine/tak-python/: Cargo.toml
engine/tak-python/src/: lib.rs
engine/tak-search/: Cargo.toml
engine/tak-search/src/: eval.rs  lib.rs  ordering.rs  pvs.rs  time.rs  tt.rs
engine/tak-train/: Cargo.toml  build.rs
engine/tak-train/src/: checkpoint.rs  config.rs  data.rs  distill.rs  export.rs  iterate.rs  lib.rs  net.rs  policy.rs  trainer.rs
engine/tak-wasm/: Cargo.toml
engine/tak-wasm/src/: lib.rs
train/: distill.py  eval_elo.py  eval_full.py  pyproject.toml  train_full.py  train_teacher.py
train/taknn/: __init__.py
train/taknn/data/: augment.py  dataset.py  labels.py  shard.py
train/taknn/eval/: elo.py  gate.py  gen_suites.py  tactical.py
train/taknn/eval/suites/: capstone_flatten.jsonl  forced_road_block.jsonl  road_win_in_1.jsonl
train/taknn/models/: student.py  teacher.py
train/taknn/train/: config.py  distill.py  export.py  loop.py
web/: next.config.js  package-lock.json  package.json
web/public/models/: opening_book.json  teacher_trunk_int8.onnx
web/public/wasm/: tak_wasm.js  tak_wasm_bg.wasm
web/src/app/: layout.tsx  page.tsx
web/src/components/: Board.tsx  Controls.tsx
web/src/engine/: book.ts  inference.ts  tak_wasm.d.ts  wasm.ts  worker.ts
