[workspace]
resolver = "2"
members = [
    "tak-core",
    "tak-search",
    "tak-data",
    "tak-wasm",
    "tak-train",
]

[workspace.dependencies]
arrayvec = "0.7"
rand = { version = "0.9", default-features = false }
rand_xoshiro = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"
half = { version = "2.4", features = ["serde"] }
tch = "0.24"
safetensors = "0.4"
