[package]
name = "tak-data"
version = "0.1.0"
edition = "2021"

[dependencies]
tak-core = { path = "../tak-core" }
tak-search = { path = "../tak-search" }
arrayvec = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
half = { workspace = true }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
rand_distr = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[[bin]]
name = "selfplay"
path = "src/bin/selfplay.rs"

[[bin]]
name = "playtak-book"
path = "src/bin/playtak_book.rs"
