[package]
name = "tak-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "tak_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
tak-core = { path = "../tak-core" }
tak-search = { path = "../tak-search" }
tak-data = { path = "../tak-data" }
half.workspace = true
numpy = "0.24"
rand.workspace = true
rand_xoshiro.workspace = true
