[package]
name = "tak-train"
version = "0.1.0"
edition = "2021"

[features]
default = []
nn = ["dep:tch"]

[dependencies]
tak-core = { path = "../tak-core" }
tak-search = { path = "../tak-search" }
arrayvec = { workspace = true }
tak-data = { path = "../tak-data" }
tch = { workspace = true, optional = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { version = "0.9", features = ["std"] }
rayon = "1.10"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
half = { workspace = true }

[[bin]]
name = "tak-train"
path = "bin/train.rs"
required-features = ["nn"]

[[bin]]
name = "tak-distill"
path = "bin/distill.rs"
required-features = ["nn"]

[[bin]]
name = "tak-export"
path = "bin/export.rs"
required-features = ["nn"]

[[bin]]
name = "tak-iterate"
path = "bin/iterate.rs"
required-features = ["nn"]
